--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.0.0",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.10",
     "nodemailer-sendgrid-transport": "^0.2.0",
