made invoice of the order available to download

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.4.10",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.3",
+    "pdfkit": "^0.11.0",
     "sequelize": "^5.21.13"
   }
 }
